--- a/wear/src/main/res/values-zh-rTW/strings.xml
+++ b/wear/src/main/res/values-zh-rTW/strings.xml
@@ -49,7 +49,7 @@
     <string name="point_game_is_finish">比賽已結束</string>
     <string name="select_games">選擇局數:</string>
     <string name="voice_support">語音</string>
-    <string name="voice_support_gbr_man">語音 英國 (男)\n(免費)</string>
+    <string name="voice_support_gbr_man">語音 英國 (男)</string>
     <string name="voice_support_gbr_woman">語音 英國 (女)</string>
     <string name="voice_support_buy">購買</string>
     <string name="voice_on">語音 開啟</string>
