--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="point_game_is_finish">Game is finished</string>
     <string name="select_games">Select games</string>
     <string name="voice_support">Voice</string>
-    <string name="voice_support_gbr_man">Voice GBR (Man)\n(Free)</string>
+    <string name="voice_support_gbr_man">Voice GBR (Man)</string>
     <string name="voice_support_gbr_woman">Voice GBR (Woman)</string>
     <string name="voice_support_buy">Buy</string>
     <string name="voice_on">Voice On</string>
