--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="voice_support_buy">Buy</string>
     <string name="voice_on">Voice On</string>
     <string name="voice_off">Voice Off</string>
+    <string name="select_title">Select: %s</string>
 </resources>
