--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="setup_a_set">a set</string>
     <string name="setup_game">Game</string>
     <string name="setup_point">Point</string>
+    <string name="setup_super_tiebreak">S-Tiebreak</string>
+    <string name="dialog_super_tiebreak">Super Tiebreak</string>
 </resources>
